test/org/midica/testfiles/failing/channel-too-high.midica
INCLUDE inc/instruments.midica

16  c  /4
